# vlib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
include/vlib/: event.hpp  types.hpp  vcph.h  vlib.hpp  window.hpp
include/vlib/core/: constants.hpp  defines.hpp
include/vlib/events/: eventConfig.hpp  eventService.hpp
include/vlib/input/: inputConfig.hpp  inputService.hpp
include/vlib/window/: winConfig.hpp  windowService.hpp
sandbox/src/: main.cpp
src/: event.cpp  events.cpp  glad.c  input.cpp  vcph.cpp  window.cpp
